--- a/index.html
+++ b/index.html
@@ -2,92 +2,51 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>User Manual - Agent Installer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Agent Installation Manual</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f9f9f9;
-      padding: 20px;
-      line-height: 1.6;
-      margin: 0;
-    }
-
-    h1, h2, h3 {
-      color: #333;
-      margin-top: 1.5em;
-    }
-
-    p, li {
-      font-size: 1rem;
-      color: #444;
-    }
-
-    pre.command {
-      background-color: #222;
+    pre {
+      background-color: #1e1e1e;
       color: #0f0;
-      padding: 12px;
-      border-radius: 6px;
-      font-family: monospace;
-      white-space: pre-wrap;
-      word-break: break-word;
+      padding: 1rem;
+      border-radius: 0.5rem;
       overflow-x: auto;
-      margin: 1em 0;
     }
-
-    ul {
-      padding-left: 1.2em;
-    }
-
     code {
-      background: #e0e0e0;
-      padding: 2px 6px;
-      border-radius: 3px;
-    }
-
-    @media (max-width: 600px) {
-      body {
-        padding: 15px;
-        font-size: 16px;
-      }
-
-      h1 {
-        font-size: 1.6em;
-      }
-
-      h2 {
-        font-size: 1.3em;
-      }
-
-      h3 {
-        font-size: 1.1em;
-      }
-
-      pre.command {
-        font-size: 0.9em;
-        padding: 10px;
-      }
+      background-color: #f1f1f1;
+      padding: 0.2em 0.4em;
+      border-radius: 4px;
     }
   </style>
 </head>
 <body>
-  <h1>Agent Installation Manual</h1>
-  <p>This page provides instructions to install the Agent using the provided scripts.</p>
+  <div class="container my-5">
+    <h1 class="mb-4">🧭 Agent Installation Manual</h1>
+    <p class="lead">
+      This guide will help you install and configure the Agent using provided shell scripts.
+    </p>
 
-  <h2>Step 1: Download and Run the Hub Installer</h2>
-  <p>Run the following command in your terminal:</p>
-  <pre class="command">curl -sL https://raw.githubusercontent.com/henrygd/beszel/main/supplemental/scripts/install-hub.sh -o install-hub.sh && chmod +x install-hub.sh && ./install-hub.sh</pre>
+    <h2 class="mt-5">Step 1: Install the Hub</h2>
+    <p>Run the following command in your terminal:</p>
+    <pre><code>curl -sL https://raw.githubusercontent.com/henrygd/beszel/main/supplemental/scripts/install-hub.sh -o install-hub.sh &amp;&amp; chmod +x install-hub.sh &amp;&amp; ./install-hub.sh</code></pre>
 
-  <h2>Step 2: Install and Start the Agent</h2>
-  <p>Run the following commands one by one:</p>
-  <pre class="command">install-agent.sh</pre>
-  <p>Then, start the agent with your assigned port and public key:</p>
-  <pre class="command">./install-agent.sh -p 45876 -k "&lt;Your Public Key Here&gt;"</pre>
+    <h2 class="mt-5">Step 2: Install and Start the Agent</h2>
+    <p>First, install the agent:</p>
+    <pre><code>install-agent.sh</code></pre>
 
-  <h3>Note:</h3>
-  <ul>
-    <li>Replace <code>&lt;Your Public Key Here&gt;</code> with the actual public key provided to you.</li>
-    <li>Make sure you run these commands as a user with proper permissions (sudo if necessary).</li>
-  </ul>
+    <p>Then run the agent with your assigned port and public key:</p>
+    <pre><code>./install-agent.sh -p 45876 -k "&lt;Your Public Key Here&gt;"</code></pre>
+
+    <div class="alert alert-warning mt-4" role="alert">
+      <strong>Note:</strong>
+      <ul class="mb-0">
+        <li>Replace <code>&lt;Your Public Key Here&gt;</code> with your actual public key.</li>
+        <li>You may need to use <code>sudo</code> for some commands, depending on your system configuration.</li>
+      </ul>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
