--- a/index.html
+++ b/index.html
@@ -12,11 +12,27 @@
       padding: 1rem;
       border-radius: 0.5rem;
       overflow-x: auto;
+      position: relative;
     }
     code {
       background-color: #f1f1f1;
       padding: 0.2em 0.4em;
       border-radius: 4px;
+    }
+    .copy-btn {
+      position: absolute;
+      top: 50%;
+      right: 1rem;
+      transform: translateY(-50%);
+      background-color: #28a745;
+      color: white;
+      border: none;
+      padding: 0.5rem;
+      border-radius: 0.25rem;
+      cursor: pointer;
+    }
+    .copy-btn:hover {
+      background-color: #218838;
     }
   </style>
 </head>
@@ -29,14 +45,23 @@
 
     <h2 class="mt-5">Step 1: Install the Hub</h2>
     <p>Run the following command in your terminal:</p>
-    <pre><code>curl -sL https://raw.githubusercontent.com/henrygd/beszel/main/supplemental/scripts/install-hub.sh -o install-hub.sh &amp;&amp; chmod +x install-hub.sh &amp;&amp; ./install-hub.sh</code></pre>
+    <div class="position-relative">
+      <pre><code id="command1">curl -sL https://raw.githubusercontent.com/henrygd/beszel/main/supplemental/scripts/install-hub.sh -o install-hub.sh && chmod +x install-hub.sh && ./install-hub.sh</code></pre>
+      <button class="copy-btn" data-clipboard-target="#command1">Copy</button>
+    </div>
 
     <h2 class="mt-5">Step 2: Install and Start the Agent</h2>
     <p>First, install the agent:</p>
-    <pre><code>install-agent.sh</code></pre>
+    <div class="position-relative">
+      <pre><code id="command2">install-agent.sh</code></pre>
+      <button class="copy-btn" data-clipboard-target="#command2">Copy</button>
+    </div>
 
     <p>Then run the agent with your assigned port and public key:</p>
-    <pre><code>./install-agent.sh -p 45876 -k "&lt;Your Public Key Here&gt;"</code></pre>
+    <div class="position-relative">
+      <pre><code id="command3">./install-agent.sh -p 45876 -k "&lt;Your Public Key Here&gt;"</code></pre>
+      <button class="copy-btn" data-clipboard-target="#command3">Copy</button>
+    </div>
 
     <div class="alert alert-warning mt-4" role="alert">
       <strong>Note:</strong>
@@ -48,5 +73,18 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.8/dist/clipboard.min.js"></script>
+  <script>
+    var clipboard = new ClipboardJS('.copy-btn');
+    clipboard.on('success', function(e) {
+      e.trigger.textContent = 'Copied!';
+      setTimeout(function() {
+        e.trigger.textContent = 'Copy';
+      }, 2000);
+    });
+    clipboard.on('error', function(e) {
+      e.trigger.textContent = 'Failed!';
+    });
+  </script>
 </body>
 </html>
