--- a/index.html
+++ b/index.html
@@ -6,64 +6,76 @@
   <title>Agent Installation Manual</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
-    pre {
-      background-color: #1e1e1e;
-      color: #0f0;
+    body {
+      background-color: #f4f6f9;
+      color: #333;
+    }
+    .code-block {
+      background-color: #282c34;
+      color: #e6e6e6;
       padding: 1rem;
-      border-radius: 0.5rem;
-      overflow-x: auto;
+      border-radius: 0.375rem;
+      margin-bottom: 1.5rem;
       position: relative;
+      font-size: 1.1rem;
     }
     code {
-      background-color: #f1f1f1;
-      padding: 0.2em 0.4em;
-      border-radius: 4px;
+      background: transparent;
+      font-family: "Courier New", Courier, monospace;
     }
     .copy-btn {
       position: absolute;
       top: 50%;
-      right: 1rem;
+      right: 10px;
       transform: translateY(-50%);
-      background-color: #28a745;
+      background-color: #007bff;
       color: white;
       border: none;
-      padding: 0.5rem;
-      border-radius: 0.25rem;
+      border-radius: 50px;
+      padding: 0.5rem 1rem;
       cursor: pointer;
+      transition: background-color 0.3s ease;
     }
     .copy-btn:hover {
-      background-color: #218838;
+      background-color: #0056b3;
+    }
+    .copy-btn:focus {
+      outline: none;
+    }
+    .alert {
+      background-color: #f8d7da;
+      color: #721c24;
     }
   </style>
 </head>
 <body>
   <div class="container my-5">
-    <h1 class="mb-4">🧭 Agent Installation Manual</h1>
-    <p class="lead">
-      This guide will help you install and configure the Agent using provided shell scripts.
+    <h1 class="text-center mb-4">🧭 Agent Installation Manual</h1>
+    <p class="lead text-center">
+      Follow the instructions below to install and configure the Agent using shell scripts.
     </p>
 
     <h2 class="mt-5">Step 1: Install the Hub</h2>
     <p>Run the following command in your terminal:</p>
-    <div class="position-relative">
-      <pre><code id="command1">curl -sL https://raw.githubusercontent.com/henrygd/beszel/main/supplemental/scripts/install-hub.sh -o install-hub.sh && chmod +x install-hub.sh && ./install-hub.sh</code></pre>
+    <div class="code-block">
+      <code id="command1">curl -sL https://raw.githubusercontent.com/henrygd/beszel/main/supplemental/scripts/install-hub.sh -o install-hub.sh && chmod +x install-hub.sh && ./install-hub.sh</code>
       <button class="copy-btn" data-clipboard-target="#command1">Copy</button>
     </div>
 
     <h2 class="mt-5">Step 2: Install and Start the Agent</h2>
     <p>First, install the agent:</p>
-    <div class="position-relative">
-      <pre><code id="command2">install-agent.sh</code></pre>
+    <div class="code-block">
+      <code id="command2">install-agent.sh</code>
       <button class="copy-btn" data-clipboard-target="#command2">Copy</button>
     </div>
 
     <p>Then run the agent with your assigned port and public key:</p>
-    <div class="position-relative">
-      <pre><code id="command3">./install-agent.sh -p 45876 -k "&lt;Your Public Key Here&gt;"</code></pre>
+    <div class="code-block">
+      <code id="command3">./install-agent.sh -p 45876 -k "&lt;Your Public Key Here&gt;"</code>
       <button class="copy-btn" data-clipboard-target="#command3">Copy</button>
     </div>
 
-    <div class="alert alert-warning mt-4" role="alert">
+    <div class="alert alert-danger mt-4" role="alert">
       <strong>Note:</strong>
       <ul class="mb-0">
         <li>Replace <code>&lt;Your Public Key Here&gt;</code> with your actual public key.</li>
