--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
       color: #333;
     }
     .code-block {
-      background-color: #282c34;
-      color: #e6e6e6;
+      background-color: #2d2d2d; /* Darker background for better contrast */
+      color: #f8f8f2; /* Light text color */
       padding: 1rem;
       border-radius: 0.375rem;
       margin-bottom: 1.5rem;
       position: relative;
       font-size: 1.1rem;
+      overflow-x: auto;
+      border: 1px solid #444; /* Subtle border to define the block */
     }
     code {
       background: transparent;
