--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
       color: #333;
     }
     .code-block {
-      background-color: #2d2d2d; /* Darker background for better contrast */
-      color: #f8f8f2; /* Light text color */
+      background-color: #2d2d2d;
+      color: #f8f8f2;
       padding: 1rem;
       border-radius: 0.375rem;
       margin-bottom: 1.5rem;
       position: relative;
       font-size: 1.1rem;
       overflow-x: auto;
-      border: 1px solid #444; /* Subtle border to define the block */
+      border: 1px solid #444;
     }
     code {
       background: transparent;
@@ -54,7 +54,7 @@
   <div class="container my-5">
     <h1 class="text-center mb-4">🧭 Agent Installation Manual</h1>
     <p class="lead text-center">
-      Follow the instructions below to install and configure the Agent using shell scripts.
+      Follow the instructions below to install and configure the agent for Beszel.
     </p>
 
     <h2 class="mt-5">Step 1: Install the Hub</h2>
@@ -64,24 +64,45 @@
       <button class="copy-btn" data-clipboard-target="#command1">Copy</button>
     </div>
 
-    <h2 class="mt-5">Step 2: Install and Start the Agent</h2>
-    <p>First, install the agent:</p>
+    <h2 class="mt-5">Step 2: Access the Beszel Hub</h2>
+    <p>Visit the Beszel Hub using the following link (replace <code>&lt;SERVER-IP-ADDRESS&gt;</code> with your server’s IP address):</p>
     <div class="code-block">
-      <code id="command2">install-agent.sh</code>
+      <code id="command2">http://&lt;SERVER-IP-ADDRESS&gt;:8090</code>
       <button class="copy-btn" data-clipboard-target="#command2">Copy</button>
     </div>
 
-    <p>Then run the agent with your assigned port and public key:</p>
+    <p>On the first visit, you’ll be prompted to create a local admin account to manage your Beszel installation.</p>
+    <img src="your-image-path-here.jpg" alt="Beszel Hub Dashboard" class="img-fluid mt-3 mb-4" />
+
+    <h2 class="mt-5">Step 3: Adding an Agent</h2>
+    <p>To monitor an existing cloud server, you need to add an agent:</p>
+    <ol>
+      <li>Click the <strong>“Add system”</strong> button in the top right corner of the dashboard.</li>
+      <li>Switch to the <strong>“binary”</strong> tab in the popup window.</li>
+      <li>Enter a name for the server you wish to monitor and its IP address.</li>
+      <li>For better security, use the server’s utility network IP address rather than its public IP. This keeps your traffic isolated from the public internet and reduces potential attack vectors. You can find the utility IP in your server’s Networking tab in the UpCloud Control Panel.</li>
+      <li>You can leave the port at its default (45876), or change it if necessary. Ensure the port isn’t blocked by your firewall.</li>
+      <li>Click the <strong>“Copy Linux command”</strong> button to view the agent installation command.</li>
+      <li>Copy this command and close the window, then click the <strong>“Add system”</strong> button.</li>
+    </ol>
+
+    <h2 class="mt-5">Step 4: Install the Agent</h2>
+    <p>On your server, connect via SSH and paste the copied installation command into the terminal:</p>
     <div class="code-block">
-      <code id="command3">./install-agent.sh -p 45876 -k "&lt;Your Public Key Here&gt;"</code>
+      <code id="command3">install-agent.sh && ./install-agent.sh -p 45876 -k "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIHq+HgsmMu8s1ugJwvygli0+n3RanqZ9BGpKKK7TSx/2"</code>
       <button class="copy-btn" data-clipboard-target="#command3">Copy</button>
     </div>
+    <p>During installation, type <strong>‘y’</strong> and press <strong>Enter</strong> to enable automatic daily updates for the agent.</p>
+
+    <h2 class="mt-5">Step 5: Verifying the Agent Status</h2>
+    <p>After installation, the agent status in the Beszel Hub will initially show as <strong>“down” (red dot)</strong>. Once the agent successfully connects to the Hub, the status will change to <strong>“up” (green dot)</strong>.</p>
+    <p>If the status doesn’t change after a while, check if the two servers can communicate. Make sure that the port (45876) is not blocked by a firewall on either server.</p>
 
     <div class="alert alert-danger mt-4" role="alert">
       <strong>Note:</strong>
       <ul class="mb-0">
-        <li>Replace <code>&lt;Your Public Key Here&gt;</code> with your actual public key.</li>
-        <li>You may need to use <code>sudo</code> for some commands, depending on your system configuration.</li>
+        <li>Replace <code>&lt;SERVER-IP-ADDRESS&gt;</code> with your actual server IP address.</li>
+        <li>Ensure the port (45876) is not blocked by any firewall on your servers.</li>
       </ul>
     </div>
   </div>
