--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
 
     <p>On the first visit, you’ll be prompted to create a local admin account to manage your Beszel installation.</p>
-    <img src="your-image-path-here.jpg" alt="Beszel Hub Dashboard" class="img-fluid mt-3 mb-4" />
+    <img src="../image/dashboard.png" alt="Beszel Hub Dashboard" class="img-fluid mt-3 mb-4" />
 
     <h2 class="mt-5">Step 3: Adding an Agent</h2>
     <p>To monitor an existing cloud server, you need to add an agent:</p>
