--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
 
     <p>On the first visit, you’ll be prompted to create a local admin account to manage your Beszel installation.</p>
-    <img src="../image/dashboard.png" alt="Beszel Hub Dashboard" class="img-fluid mt-3 mb-4" />
+    <img src="https://raw.githubusercontent.com/mdmuradhasanmedia/Beszel-Server-Monitoring/c2dabf0439b63fa94b65b6dd8fede2ed5510629b/image/dashboard.png" alt="Beszel Hub Dashboard" class="img-fluid mt-3 mb-4" />
 
     <h2 class="mt-5">Step 3: Adding an Agent</h2>
     <p>To monitor an existing cloud server, you need to add an agent:</p>
@@ -85,7 +85,7 @@
       <li>Click the <strong>“Copy Linux command”</strong> button to view the agent installation command.</li>
       <li>Copy this command and close the window, then click the <strong>“Add system”</strong> button.</li>
     </ol>
-
+<img src="https://raw.githubusercontent.com/mdmuradhasanmedia/Beszel-Server-Monitoring/c2dabf0439b63fa94b65b6dd8fede2ed5510629b/image/add_system.png" alt="Beszel Hub Dashboard" class="img-fluid mt-3 mb-4" />
     <h2 class="mt-5">Step 4: Install the Agent</h2>
     <p>On your server, connect via SSH and paste the copied installation command into the terminal:</p>
     <div class="code-block">
@@ -97,6 +97,8 @@
     <h2 class="mt-5">Step 5: Verifying the Agent Status</h2>
     <p>After installation, the agent status in the Beszel Hub will initially show as <strong>“down” (red dot)</strong>. Once the agent successfully connects to the Hub, the status will change to <strong>“up” (green dot)</strong>.</p>
     <p>If the status doesn’t change after a while, check if the two servers can communicate. Make sure that the port (45876) is not blocked by a firewall on either server.</p>
+<img src="https://raw.githubusercontent.com/mdmuradhasanmedia/Beszel-Server-Monitoring/c2dabf0439b63fa94b65b6dd8fede2ed5510629b/image/final_dashboard.png" alt="Beszel Hub Dashboard" class="img-fluid mt-3 mb-4" />
+<img src="https://raw.githubusercontent.com/mdmuradhasanmedia/Beszel-Server-Monitoring/c2dabf0439b63fa94b65b6dd8fede2ed5510629b/image/final_dashboard_2.png" alt="Beszel Hub Dashboard" class="img-fluid mt-3 mb-4" />
 
     <div class="alert alert-danger mt-4" role="alert">
       <strong>Note:</strong>
